syntax = "proto3";

package lava.v1;

import "google/api/httpbody.proto";

option go_package = "github.com/pubgo/lava/pkg/proto/lavapbv1;lavapbv1";

message ServiceInfo {
  string name = 1;
  string version = 2;
  string path = 3;
  string hostname = 4;
  string ip = 5;
  string request_id = 6;
}
